<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10sp">

        <ImageView
            android:id="@+id/restaurant_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:text="Nama Restoran"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/restaurant_photo"
            app:layout_constraintTop_toTopOf="@+id/restaurant_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:orientation="horizontal">
            <!--            <TextView-->
            <!--                android:id="@+id/rating_label"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/rating_label"-->
            <!--                app:layout_constraintStart_toStartOf="@+id/restaurant_name"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/restaurant_name" />-->

            <RatingBar
                android:id="@+id/rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:rating="@string/rating_default"
                android:isIndicator="true"
                android:stepSize=".5"/>
            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2sp"
                android:text="@string/rating_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/rating_label"
                app:layout_constraintTop_toTopOf="@+id/rating_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cost_for_two_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost_for_two_label"
                app:layout_constraintStart_toStartOf="@+id/rating_label"
                app:layout_constraintTop_toBottomOf="@+id/rating_label" />

            <TextView
                android:id="@+id/cost_for_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2sp"
                android:layout_marginEnd="2sp"
                android:text="@string/cost_for_two_default"
                app:layout_constraintEnd_toEndOf="@+id/restaurant_name"
                app:layout_constraintHorizontal_bias="0.238"
                app:layout_constraintStart_toEndOf="@+id/cost_for_two_label"
                app:layout_constraintTop_toTopOf="@+id/cost_for_two_label" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toEndOf="@+id/cost_for_two"
                app:layout_constraintTop_toTopOf="@+id/cost_for_two" />

        </LinearLayout>




        <TextView
            android:id="@+id/has_online_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_online_delivery_default"
            app:layout_constraintStart_toStartOf="@+id/rating_label"
            app:layout_constraintTop_toBottomOf="@+id/cost_for_two_label" />
    </LinearLayout>

</LinearLayout>